# simplevtube

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
character-window/: index.html
docs/: SimpleVTube_SRS_Architecture.md  TROUBLESHOOTING.md  v1.12-final-sprint.md  v2-roadmap.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_engine.rs  commands.rs  events.rs  main.rs  settings_manager.rs  window_manager.rs
src/character-window/: index.html  render.js
src/emote-window/: index.html  render.js
src/website/: index.html
